[metadata]
name = goose-bubble
author = Michael Davies
author-email = michael@the-davies.net
summary = Photo and video manager
description-file =
    README.rst
home-page = https://github.com/mrda/goose-bubble
classifier =
    Development Status :: 4 - Beta
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Information Technology
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 2
    Programming Language :: Python :: 2.7
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.4

[files]
packages =
    goose-bubble

[global]
setup-hooks =
    pbr.hooks.setup_hook

[entry_points]
console_scripts =
    goose-bubble = goosebubble.shell:main

[build_sphinx]
source-dir = doc/source
build-dir = doc/build
all_files = 1

[upload_sphinx]
upload-dir = doc/build/html

[pbr]
warnerrors = True

[wheel]
universal = 1

